--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,13 @@ a {
 
 .hero-title {
   width: 386px;
+  margin-bottom: 40px;
 
   font-weight: 600;
   font-size: 64px;
   line-height: 1.25;
-  margin-bottom: 40px;
+
+  color: #000000;
 }
 .hero-subtitle {
   margin-bottom: 60px;
@@ -201,11 +203,13 @@ Skills section
   border-radius: 10px;
 
   background-color: #f5f5f5;
-  transition: transform 250ms ease;
+
+  transition: transform 250ms ease, box-shadow 250ms ease;
 }
 
 .skills-card:hover {
-  transform: scale(1.03);
+  box-shadow: 1px 15px 20px -1px #cfcfcf;
+  transform: scale(1.01);
 }
 
 .skills-card-group {
@@ -251,8 +255,6 @@ Skills section
 
   width: 426px;
   height: 579px;
-
-  transition: background-color 250ms ease, transform 250ms ease;
 }
 
 /* .second-card:hover {
